--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -18,7 +18,8 @@
    "outputs": [],
    "source": [
     "#1 Variables\n",
-    "MODEL_NAME = \"gpt-3.5-turbo\"\n",
+    "import os\n",
+    "MODEL_NAME = \"gpt-4\"\n",
     "TEMPERATURE = 0\n",
     "OPENAI_API_KEY = \"\"\n",
     "os.environ[\"OPENAI_API_KEY\"] = OPENAI_API_KEY\n",
@@ -53,12 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#2 Init\n",
-    "import os\n",
     "from langchain.prompts import PromptTemplate, FewShotPromptTemplate\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.chains import LLMChain\n",
@@ -100,12 +100,10 @@
     "    retrievalQA_chain = RetrievalQA.from_chain_type(llm=llm, chain_type='stuff', retriever=vectordb.as_retriever())\n",
     "    personal_data_tool = Tool(name='conf', func=retrievalQA_chain.run, description='논어 데이터')\n",
     "    # agent\n",
-    "    memory_key = 'history'\n",
-    "    memory = ConversationBufferMemory(memory_key=memory_key, return_messages=True)\n",
     "    system_message = SystemMessage(content=CONTEXT_PROMPT)\n",
-    "    prompt = OpenAIFunctionsAgent.create_prompt(system_message=system_message, extra_prompt_messages=[MessagesPlaceholder(variable_name=memory_key)])\n",
+    "    prompt = OpenAIFunctionsAgent.create_prompt(system_message=system_message)\n",
     "    agent = OpenAIFunctionsAgent(llm=llm, tools=[personal_data_tool], prompt=prompt)\n",
-    "    agent_executor = AgentExecutor(agent=agent, tools=[personal_data_tool], memory=memory, verbose=True, handle_parsing_errors=True)\n",
+    "    agent_executor = AgentExecutor(agent=agent, tools=[personal_data_tool], verbose=True, handle_parsing_errors=True)\n",
     "    return agent_executor\n",
     "\n",
     "def style_init() -> LLMChain:\n",
@@ -147,8 +145,9 @@
     "def main():\n",
     "    user_input = get_user_input()\n",
     "    result = context_chain({'input': user_input}, return_only_outputs=True)\n",
-    "    conf_result = style_chain(inputs=result['output'])\n",
-    "    print(conf_result[\"text\"])\n",
+    "    #conf_result = style_chain(inputs=result['output'])\n",
+    "    #print(conf_result[\"text\"])\n",
+    "    print(result['output'])\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
